samples/_failures_safe/1761088374_5b5b73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78a4fafd.c: In function ‘main’:
./samples/SAFE/__tmp_78a4fafd.c:179:28: error: missing terminating " character
  179 |             case 3: printf("
      |                            ^
./samples/SAFE/__tmp_78a4fafd.c:179:13: error: expected expression at end of input
  179 |             case 3: printf("
      |             ^~~~
./samples/SAFE/__tmp_78a4fafd.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78a4fafd.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78a4fafd.c:179:13: error: expected declaration or statement at end of input
